--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,45 +7,46 @@
 body {
     background-color: #d9dcd6;
 }
-
-.header {
+/* Header style start here */
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+header h1, #seo {
     display: inline-block;
     font-size: 48px;
-}
-
-.header h1 .seo {
     color: #d9dcd6;
 }
 
-.header div {
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
-}
-
-.header div ul {
     list-style-type: none;
 }
 
-.header div ul li {
+header nav ul {
+    list-style-type: none;
+}
+
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
+/* Header style end */
 
+/* This a element selector declaration apply to all all <a href="url"> */
 a {
     color: #ffffff;
     text-decoration: none;
 }
 
+/* This p element selector declaration apply to all <p> */
 p {
     font-size: 16px;
 }
