Refactored the HTML and CSS of the Footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 body {
     background-color: #d9dcd6;
 }
-/* Header style start here */
+/* Header */
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -20,7 +20,7 @@ header h1, #seo {
     font-size: 48px;
     color: #d9dcd6;
 }
-
+/* Navigattion bar */
 header nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -38,15 +38,15 @@ header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
-/* Header style end */
 
-/* This a element selector declaration apply to all all <a href="url"> */
+
+/*  <a href="url"> */
 a {
     color: #ffffff;
     text-decoration: none;
 }
 
-/* This p element selector declaration apply to all <p> */
+/* Paragraph */
 p {
     font-size: 16px;
 }
@@ -189,13 +189,14 @@ p {
     font-size: 36px;
 }
 
-.footer {
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
+    font-size: 20px;
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
