--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ header h1, #seo {
     font-size: 48px;
     color: #d9dcd6;
 }
-/* Navigattion bar */
+/* navigattion */
 header nav {
     padding-top: 15px;
     margin-right: 20px;
