--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,10 +140,10 @@ footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-align: center;
-    font-size: 20px;
+    text-align: center;      
 }
 
 footer h2 {
     font-size: 20px;
+    margin: 0;
 }
