--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,10 +38,10 @@ header {
     color: #ffffff;
 }
 
-header h1, span {
+header h1, #seo {
     display: inline-block;
     font-size: 48px;
-    color: #d9dcd6;    
+    color: #d9dcd6;
 }
 
 /* navigattion */
@@ -64,15 +64,16 @@ header nav ul li {
 }
 
 /* featured image */
-.hero img {
+.hero {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
+    background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
 }
 
-/* services content */
+/* main/ services content */
 .content {
     width: 75%;
     display: inline-block;
